--- a/chat/templates/chat/sign_in.html
+++ b/chat/templates/chat/sign_in.html
@@ -11,6 +11,7 @@
     
             {{ form }}
 
+            <button type="submit" class="action-btn">Sign In</button>
         </form>
     </div>
     
