--- a/chat/templates/chat/blocks.html
+++ b/chat/templates/chat/blocks.html
@@ -3,9 +3,11 @@
 {% block title %}Blocks{% endblock %}
 
 {% block content %}
-
-    {% for block in blocks %}
-        <h2>{{ block }}</h2>
-    {% endfor %}
-
+    <div class="list-content">
+        <div>
+            {% for block in blocks %}
+            <p><a href="{% url 'block_group' block.slug %}"><h2>{{ block }}</h2></a></p>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
