--- a/chat/templates/chat/candlechat_users.html
+++ b/chat/templates/chat/candlechat_users.html
@@ -5,10 +5,10 @@
 {% block title %}Block detail{% endblock %}
 
 {% block content %}
-    <div>
+    <div class="list-content">
         <div>
             {% for user in users %}
-                <p><a href="{% url 'private_block' user.id %}" id="usersLink" data-user-id="{{ user.id }}">{{ user }}</a></p>
+                <p><a href="{% url 'block_private' user.id %}" id="usersLink" data-user-id="{{ user.id }}"><h2>{{ user }}</h2></a></p>
             {% endfor %}
         </div>
     </div>
