--- a/chat/templates/chat/dashboard.html
+++ b/chat/templates/chat/dashboard.html
@@ -5,6 +5,9 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
+    <div class="desk-display">
+        <h2>ONLY MOBILE VIEW IS AVAILABLE 😂 <br>DESKTOP AND TABLET UNDER CONSTRUCTION;</h2>
+    </div>
     <div class="dashboard">
 
         <div class="dashboard-heading">
